fix(java): expose OpenCL loader name for LWJGL